==> Edmond-Sung-Tymphany/Hendrix_M_Lite_GD/sw/project_files/Hendrix_M/gd32/attachedDevices.c <==
#include "stm32f0xx_usart.h"
#include "Setting_id.h"
#include "deviceTypes.h"
#include "attachedDevices.h"
#include "trace.h"
#include "product.config"
#define ADC_THRESHOLD_RANGE    0, 4095

void UartDrv_Init(eTpUartDevice id)
{
    switch(id)
    {
        case TP_UART_DEV_1:
        {
            GPIO_InitTypeDef GPIO_InitStructure;

            RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA, ENABLE);
            RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1,ENABLE);

            GPIO_PinAFConfig(GPIOA, GPIO_PinSource9, GPIO_AF_1);
            GPIO_PinAFConfig(GPIOA, GPIO_PinSource10, GPIO_AF_1);

            /* Configure USART1(Debug) pins:  Rx and Tx */
            GPIO_InitStructure.GPIO_Pin     = GPIO_Pin_9 | GPIO_Pin_10;
            GPIO_InitStructure.GPIO_Speed   = GPIO_Speed_50MHz;
            GPIO_InitStructure.GPIO_Mode    = GPIO_Mode_AF;
            GPIO_InitStructure.GPIO_OType   = GPIO_OType_PP;
            GPIO_InitStructure.GPIO_PuPd    = GPIO_PuPd_UP;
            GPIO_Init(GPIOA, &GPIO_InitStructure);
        }
        break;
        case TP_UART_DEV_2:
        {
            GPIO_InitTypeDef GPIO_InitStructure;

            RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA, ENABLE);
            RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART2,ENABLE);

            GPIO_PinAFConfig(GPIOA, GPIO_PinSource14, GPIO_AF_1);
            GPIO_PinAFConfig(GPIOA, GPIO_PinSource15, GPIO_AF_1);

            /* Configure USART2(BLE) pins:  Rx and Tx */
            GPIO_InitStructure.GPIO_Pin     = GPIO_Pin_14 | GPIO_Pin_15;
            GPIO_InitStructure.GPIO_Speed   = GPIO_Speed_50MHz;
            GPIO_InitStructure.GPIO_Mode    = GPIO_Mode_AF;
            GPIO_InitStructure.GPIO_OType   = GPIO_OType_PP;
            GPIO_InitStructure.GPIO_PuPd    = GPIO_PuPd_UP;
            GPIO_Init(GPIOA, &GPIO_InitStructure);
        }
        break;
        default:
            ASSERT(0);
            break;
    }
}
